<resources>
    <string name="app_name">UrBest</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to best of you !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="exercise">EXERCISES</string>
    <string name="receipt">Receipt</string>
    <string name="mental_health_fragment">mental health fragment</string>
    <string name="todo">TODO</string>
    <string name="_10_items">10 items</string>
    <string name="muesli_with_almond_milk">Muesli</string>
    <string name="cajun_tofu">Cajun Tofu</string>
    <string name="preparation_time_3_min">Preparation Time : 10 min</string>
    <string name="ingredients">Ingredients</string>
    <string name="how_to_make">How To Make</string>
    <string name="detox_salad">Detox Salad</string>
    <string name="guacamole">Guacamole</string>
    <string name="chia_pudding">Chia Pudding</string>
    <string name="fudge">Fudge</string>
    <string name="pancake">Pancake</string>
    <string name="smoothie">Smoothie</string>
    <string name="risotto">Risotto</string>
    <string name="salmon">Salmon</string>
    <string name="steps">Steps</string>
    <string name="recipe">Recipe</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="first_name">First Name</string>
    <string name="mickey">Mickey</string>
    <string name="name_surname">Name Surname</string>
    <string name="last_name">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="idk">IDK</string>
    <string name="mail">Mail</string>
    <string name="best_of_you">Best of You</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="favorites">Favorites</string>
    <string name="hi_i_m_wil_wheaton">Hi, I’m Wil Wheaton.</string>
    <string name="podcasts">Podcasts</string>
    <string name="breathe">BREATHE</string>
    <string name="meditation">MEDITATION</string>
    <string name="question">Wanna see someone great ?</string>
    <string name="response">Look at the mirror!</string>
    <string name="permission_denied">Location permission required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="_0_00_miles">0.00 miles</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="take_a_walk">Take a Walk !</string>
    <string name="radiobutton">RadioButton</string>
    <string name="how_do_you_feel_today">How do you feel today ?</string>
    <string name="to_best_of_you">to best of you...</string>
    <string name="welcome2">Welcome ,</string>

</resources>