<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/nav_explore"
            android:title="@string/explore"
            android:icon="@drawable/ic_baseline_explore_24"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_person_outline_24"/>
        <item
            android:id="@+id/nav_walk"
            android:icon="@drawable/ic_baseline_directions_walk_24"
            android:title="@string/take_a_walk" />

    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share_24"/>
        </menu>
    </item>
</menu>