<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckground"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/loginMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/mail"
        android:importantForAutofill="no"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginMail"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawableLeft="@drawable/ic_outline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/forgotPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPW"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF5252"
        android:onClick="login"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="#FFFFFF"
        tools:ignore="RelativeOverlap"
        tools:targetApi="lollipop" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FF5252"
        android:onClick="register"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="#FFFFFF"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Don't you have an account ?"
        android:textSize="20sp" />

</RelativeLayout>