<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:gravity="center_horizontal"
        android:text="@string/best_of_you"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/head"
        app:layout_constraintStart_toStartOf="@+id/head"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <EditText
        android:id="@+id/forgotPwMail"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/subTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subTitle"
        app:layout_constraintTop_toBottomOf="@+id/subTitle" />

    <Button
        android:id="@+id/resetPW"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn"
        android:clickable="true"
        android:focusable="true"
        android:onClick="resetPassword"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="@+id/forgotPwMail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/forgotPwMail"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwMail" />

</androidx.constraintlayout.widget.ConstraintLayout>